--- a/Gallery.WEB/Views/Friends/SearchedUsers.cshtml
+++ b/Gallery.WEB/Views/Friends/SearchedUsers.cshtml
@@ -37,7 +37,8 @@
 
                                     @if (!string.IsNullOrWhiteSpace(item.PhotoUser))
                                     {
-                                        <img src=" @Html.DisplayFor(modelItem => item.PhotoUser)" />
+                                        @*<img src=" @Html.DisplayFor(modelItem => item.PhotoUser)" />*@
+                                        <img src='@Url.Content(item.PhotoUser)' />
                                     }
                                     else
                                     {
