--- a/Gallery.WEB/Views/Friends/SearchedFriends.cshtml
+++ b/Gallery.WEB/Views/Friends/SearchedFriends.cshtml
@@ -32,7 +32,8 @@
 
                                     @if (!string.IsNullOrWhiteSpace(item.PhotoUser))
                                     {
-                                        <img src=" @Html.DisplayFor(modelItem => item.PhotoUser)" />
+                                        @*<img src=" @Html.DisplayFor(modelItem => item.PhotoUser)" />*@
+                                        <img src='@Url.Content(item.PhotoUser)' />
                                     }
                                     else
                                     {
@@ -53,7 +54,7 @@
                 </div>
             }
         </div>
-        
+
 
     </div>
 }
