--- a/Gallery.WEB/Views/Home/AllImagesFriendsPartial.cshtml
+++ b/Gallery.WEB/Views/Home/AllImagesFriendsPartial.cshtml
@@ -20,7 +20,8 @@
                             <div class="hidden">@Html.DisplayFor(modelItem => item.UserId)</div>
 
                             <div class="imgs-block__img">
-                                <img src=" @Html.DisplayFor(modelItem => item.PathImage)" />
+                                @*<img src=" @Html.DisplayFor(modelItem => item.PathImage)" />*@
+                                <img src='@Url.Content(item.PathImage)' />
                             </div>
                             <div class="photo-name">
                                 <span class="countLikes-js countLikes">@item.CountLikes</span>
