--- a/Gallery.WEB/Views/Image/EditImage.cshtml
+++ b/Gallery.WEB/Views/Image/EditImage.cshtml
@@ -32,7 +32,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PathImage, htmlAttributes: new { @class = "control-label col-md-4" })
             <div class="col-md-5">
-                <img src=" @Html.DisplayFor(model => model.PathImage)" style="width: 100%" />
+                @* <img src=" @Html.DisplayFor(model => model.PathImage)" style="width: 100%" />*@
+                <img src='@Url.Content(Model.PathImage)' />
             </div>
         </div>
         <div class="form-group txt-center">
